[package]
name = "abs_native"
version = "0.1.0"
edition = "2021"

[lib]
name = "abs_native"
crate-type = ["cdylib"]

[dependencies]
hex = "0.4"
k256 = { version = "0.13", features = ["ecdsa"] }
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py310"] }
serde_json = "1"
sha2 = "0.10"
tiny-keccak = { version = "2", features = ["keccak"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
